# augmented-pca

./: .readthedocs.yaml  .readthedocs.yml  README.md  pyproject.toml  setup.cfg  setup.py
.eggs/bleach-4.1.0-py3.8.egg/EGG-INFO/: RECORD
apca/: models.py  utils.py
docs/: requirements.txt  sphinx_env.yaml
docs/draw_io_files/: aapca_diagram.drawio  encoded_inference_diagram.drawio  joint_inference_diagram.drawio  local_inference_diagram.drawio
docs/images/drawio_files/: sapca_diagram.drawio
docs/source/: conf.py  index.rst
docs/source/_templates/: layout.html
docs/source/contents/: citation.rst  examples.rst  installation.rst  introduction.rst  models.rst
docs/source/package_ref/: datasets.rst  metrics.rst  models.rst
docs_/source/: conf.py  index.rst
src/: augmented_pca.py
src/apca/: __init__.py  metrics.py  models.py
src/augmented_pca.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/cancer_gene_expression/: sapca_cancer_gene_express.ipynb
tests/cancer_gene_expression/notebook_html/: sapca_cancer_gene_express.html
tests/examples/: apca_adv_behav.ipynb  apca_example_usage.ipynb  gen_synthetic_data_apca_paper_draft.ipynb
tests/examples/.ipynb_checkpoints/: gen_synthetic_data-checkpoint.ipynb
tests/examples/cancer_gene_expression/: sapca_cancer_gene_express-Copy1.ipynb  sapca_cancer_gene_express.ipynb
tests/examples/synthetic_data/: X_synth_1.npy  X_synth_2.npy  gen_synthetic_data.ipynb
tests/examples/yale_face/: preprocessing.py  yale_apca_predict.ipynb  yale_face_apca_reconstruction.ipynb
tests/examples/yale_face_dataset/: yale_face_apca_reconstruction.html  (+2 more)
tests/synthetic_data/: apca_adv_behav.ipynb
tests/yale_face/: imbalanced_shadow_correction_fid.ipynb  load_data.py  shadow_split.py  yale_face_apca_predict.ipynb  yale_face_apca_reconstruction.ipynb  yale_face_continuous_azimuth_elevation.html  yale_face_kernel_apca_reconstruction.ipynb
(+14 files in other folders)
