[metadata]
name = augmented-pca
version = 0.0.1
author = Billy Carson
author_email = wec14@duke.edu
description = Implementations of adversarial and supervised linear factor models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wecarsoniv/augmented-pca
project_urls =
    Issue Tracker = https://github.com/wecarsoniv/augmented-pca/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# package_dir =
#     = src
package_dir = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

