[metadata]
name = augmented-pca
version = 0.3.0
author = Billy Carson
author_email = williamcarsoniv@gmail.com
description = Python implementations of supervised and adversarial and linear factor models.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    augmentedpca
    augmented principal component analysis
    augmented pca
    principal component analysis
    pca
    factor model
    factor models
    linear models
    autoencoder
    autoencoders
    supervised autoencoder
    supervised autoencoders
    SAE
    adversarial autoencoder
    adversarial autoencoders
    fair machine learning
    machine learning
    representation learning
    dimensionality reduction
url = https://github.com/wecarsoniv/augmented-pca
project_urls =
    Issue Tracker = https://github.com/wecarsoniv/augmented-pca/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.11
install_requires =
    numpy
    scipy

[options.packages.find]
where = src

